--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 certifi==2018.11.29
+chardet==3.0.4
 click==6.6
-Flask==0.11.1
+Flask==1.0.2
 geojson==1.3.3
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.10
 MarkupSafe==0.23
+mkl-fft==1.0.10
+mkl-random==1.0.2
 numpy==1.15.4
 pandas==0.24.0
 python-dateutil==2.7.5
 pytz==2018.9
-requests==2.11.1
+requests==2.21.0
 six==1.12.0
-Werkzeug==0.11.11
+urllib3==1.24.1
+Werkzeug==0.14.1
 xlrd==1.2.0
